@@ -42,6 +42,7 @@ CString CommitCommand::LoadLogMessage()
 
 bool CommitCommand::Execute()
 {
+	bool bRet = false;
 	bool bFailed = true;
 	CTSVNPathList selectedList;
 	if (parser.HasKey(_T("logmsg")) && (parser.HasKey(_T("logmsgfile"))))
@@ -106,10 +107,11 @@ bool CommitCommand::Execute()
 			CRegDWORD err = CRegDWORD(_T("Software\\TortoiseSVN\\ErrorOccurred"), FALSE);
 			err = (DWORD)progDlg.DidErrorsOccur();
 			bFailed = progDlg.DidErrorsOccur();
+			bRet = progDlg.DidErrorsOccur();
 			CRegDWORD bFailRepeat = CRegDWORD(_T("Software\\TortoiseSVN\\CommitReopen"), FALSE);
 			if (DWORD(bFailRepeat)==0)
 				bFailed = false;		// do not repeat if the user chose not to in the settings.
 		}
 	}
-	return true;
+	return bRet;
 }
