@@ -32,6 +32,7 @@
 
 bool CreatePatchCommand::Execute()
 {
+	bool bRet = false;
 	CString savepath = CPathUtils::GetLongPathname(parser.GetVal(_T("savepath")));
 	CCreatePatch dlg;
 	dlg.m_pathList = pathList;
@@ -41,11 +42,11 @@ bool CreatePatchCommand::Execute()
 		{
 			cmdLinePath = pathList.GetCommonRoot();
 		}
-		CreatePatch(cmdLinePath.GetDirectory(), dlg.m_pathList, CTSVNPath(savepath));
+		bRet = CreatePatch(cmdLinePath.GetDirectory(), dlg.m_pathList, CTSVNPath(savepath));
 		SVN svn;
 		svn.Revert(dlg.m_filesToRevert, CStringArray(), false);
 	}
-	return true;
+	return bRet;
 }
 
 UINT_PTR CALLBACK CreatePatchCommand::CreatePatchFileOpenHook(HWND hDlg, UINT uiMsg, WPARAM wParam, LPARAM /*lParam*/)
