@@ -41,6 +41,7 @@ bool RevertCommand::Execute()
 		progDlg.SetItemCount(dlg.m_selectedPathList.GetCount());
 		progDlg.SetSelectedList(dlg.m_selectedPathList);
 		progDlg.DoModal();
+		return !progDlg.DidErrorsOccur();
 	}
-	return true;
+	return false;
 }
